--- a/ahk/src/mssql/mssql.csproj
+++ b/ahk/src/mssql/mssql.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ahkcommon\ahkcommon.csproj" />
   </ItemGroup>
 
