--- a/.github/workflows/ahk-build-images.yml
+++ b/.github/workflows/ahk-build-images.yml
@@ -4,7 +4,6 @@ on:
   push:
     paths:
       - "ahk/**"
-      - "megoldas/**"
       - ".github/workflows/**"
 
 jobs:
@@ -15,19 +14,14 @@ jobs:
       - uses: actions/checkout@v1
         with:
           fetch-depth: 1
-      - name: Login to GitHub Docker packages
+
+      - name: Build and push Docker images
+        working-directory: ./ahk
         env:
           DOCKER_REG_USERNAME: ${{ secrets.DOCKER_REG_USERNAME }}
           DOCKER_REG_TOKEN: ${{ secrets.DOCKER_REG_TOKEN }}
-        run: docker login docker.pkg.github.com -u $DOCKER_REG_USERNAME -p $DOCKER_REG_TOKEN
-      - name: Build all images with compose
         run: |
-          cd ahk/src
+          docker login -u $DOCKER_REG_USERNAME -p $DOCKER_REG_TOKEN
           docker-compose build
-      - name: Test sample solution for MSSQL
-        run: docker run --rm -v $(pwd)/megoldas/Lab-MSSQL:/megoldas docker.pkg.github.com/bmeviauac01/laborok/lab-mssql:2020
-      - name: Push Docker images
-        run: |
-          cd ahk/src
           docker-compose push
-          docker logout docker.pkg.github.com
+          docker logout
