--- a/ahk/mssql/Dockerfile
+++ b/ahk/mssql/Dockerfile
@@ -1,11 +1,7 @@
-FROM mcr.microsoft.com/dotnet/core/runtime:2.1.14-alpine3.10 as base
-# https://github.com/dotnet/SqlClient/issues/81#issuecomment-545214765
-# https://github.com/dotnet/SqlClient/issues/81#issuecomment-545214765
-RUN apk add --no-cache icu-libs
-ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
+FROM mcr.microsoft.com/dotnet/core/runtime:2.1.14-stretch-slim as base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/core/sdk:2.1.802-alpine3.10 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:2.1.802-stretch AS build
 WORKDIR /src
 COPY ["mssql/mssql.csproj", "mssql/"]
 COPY ["ahk.common/ahk.common.csproj", "ahk.common/"]
