MSSQL: obfuszkalt IL kod

--- a/ahk/mssql/mssql.csproj
+++ b/ahk/mssql/mssql.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\ahk.common\ahk.common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="obfuscar.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
