--- a/ahk/mssql/Dockerfile
+++ b/ahk/mssql/Dockerfile
@@ -15,9 +15,13 @@ RUN dotnet build "mssql.csproj" -c Release -o /app
 
 FROM build AS publish
 RUN dotnet publish "mssql.csproj" -c Release -o /app
+RUN dotnet tool install --global obfuscar.globaltool --version "2.2.25"
+RUN /root/.dotnet/tools/obfuscar.console -s /app/obfuscar.xml
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
+COPY --from=publish /obf .
+RUN rm /app/obfuscar.xml
 
 CMD dotnet "/app/mssql.dll"
