--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -4,11 +4,6 @@ on:
   push:
     branches:
       - master
-    paths:
-      - "docs/**"
-      - "mkdocs.yml"
-      - "requirements_docs.txt"
-      - ".github/workflows/**"
 
 jobs:
   build-docs:
@@ -18,26 +13,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.8"
-
-      - name: Cache dependencies
-        uses: actions/cache@v1
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements_docs.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Install dependencies
-        run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install -r ./requirements_docs.txt
-
       - name: Build docs
-        run: mkdocs build
+        uses: docker://squidfunk/mkdocs-material:5.4.0
+        with:
+          args: build
 
       - name: Deploy docs to gh-pages branch
         uses: peaceiris/actions-gh-pages@v3
