--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: BMEVIAUAC09 Software development laboratory 1
 site_author: Dudás Ákos
-copyright: Copyright &copy; BME AUT
+copyright: Copyright &copy; BME VIK AUT
 repo_name: bmeviauac01/laboratories-en
 repo_url: https://github.com/bmeviauac01/laboratories-en
 
