Copyright szoveg: BME VIK AUT

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: BMEVIAUAC09 Szoftverfejlesztés laboratórium 1
 site_author: Dudás Ákos
-copyright: Copyright &copy; BME AUT
+copyright: Copyright &copy; BME VIK AUT
 repo_name: bmeviauac01/laborok
 repo_url: https://github.com/bmeviauac01/laborok
 
