Prettier kikapcsolasa markdown-ra
Prettier nem alkalmas MkDocs markdown formazasra
"prettier.disableLanguages" helyett "prettier.requireConfig"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "spellright.language": ["hu"],
   "spellright.documentTypes": ["markdown", "latex", "plaintext"],
   "prettier.disableLanguages": ["markdown"],
+  "prettier.requireConfig": true,
   "markdownlint.config": {
     "default": true,
     "MD007": { "indent": 4 }
