Disable prettier for markdown
Prettier is of no use for markdown with MkDocs
"prettier.disableLanguages" replaced with "prettier.requireConfig"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     "latex",
     "plaintext"
   ],
-  "prettier.disableLanguages": ["markdown"],
+  "prettier.requireConfig": true,
   "markdownlint.config": {
     "default": true,
     "MD007": { "indent": 4 }
