Grammarly VS Code extension enabled and configured

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
     "recommendations": [
         "davidanson.vscode-markdownlint",
-        "ban.spellright"
+        "znck.grammarly"
     ]
 }
