--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,14 @@
 {
-  "spellright.language": [
-    "en"
-  ],
-  "spellright.documentTypes": [
-    "markdown",
-    "latex",
-    "plaintext"
-  ],
   "prettier.requireConfig": true,
   "markdownlint.config": {
     "default": true,
     "MD007": { "indent": 4 }
+  },
+  "grammarly.autoActivate": true,
+  "grammarly.audience": "knowledgeable",
+  "grammarly.dialect": "american",
+  "grammarly.domain": "general",
+  "grammarly.severity": {
+    "Passive voice": 4
   }
 }
