--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ theme:
     - navigation.instant
     - navigation.top
     - search.suggest
+    - content.action.edit
   logo: logo-bme-aut.png
   favicon: favicon.ico
 
