--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,16 +2,38 @@
     "version": "2.0.0",
     "tasks": [
       {
-        "label": "Start mkdocs container",
+        "label": "Build mkdocs container",
+        "type": "shell",
+        "command": "docker build -t mkdocs .",
+        "options": {
+          "cwd": "${workspaceFolder}"
+        },
+        "presentation": {
+          "reveal": "always",
+          "panel": "new"
+        },
+        "problemMatcher": [],
+        "group": {
+          "kind": "build",
+          "isDefault": true
+        }
+      },
+      {
+        "label": "Run mkdocs container",
         "type": "shell",
         "command": "docker run -it --rm -p 8000:8000 -v ${PWD}:/docs mkdocs",
         "options": {
-          "cwd": "${workspaceFolder}",
+          "cwd": "${workspaceFolder}"
         },
         "presentation": {
-            "reveal": "always",
-            "panel": "new"
-          }
+          "reveal": "always",
+          "panel": "new"
+        },
+        "problemMatcher": [],
+        "group": {
+          "kind": "build",
+          "isDefault": true
+        }
       }
     ]
   }
